--- a/Game Kataloger/src/main/AndroidManifest.xml
+++ b/Game Kataloger/src/main/AndroidManifest.xml
@@ -13,15 +13,21 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name="klausus.game.kataloger.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="klausus.game.kataloger.GenresActivity"
+            android:label="@string/title_activity_genres" >
+        </activity>
+
     </application>
 
 </manifest>
